--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ var STYLE_PREFIX = 'wsite';
 	Computational Astrophysicist
 </span></h2>
 					<p><span class="wsite-text wsite-headline-paragraph">
-	I study galaxy formation and the astrophysical origins of heavy elements. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time. My work uses high performance computing and statistical methods. <br /><br />Currently, I am working towards my Physics Ph.D. in MIT's Physics Department & Kavli Institute for Astrophysics and Space Research. Previously, I obtained a B.Sc. in Physics from Brown University.<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and riding bikes.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu
+	I study galaxy formation and the astrophysical origins of heavy elements. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time. My work uses high performance computing and statistical methods. <br /><br />Currently, I am completing my Physics Ph.D. at MIT. Previously, I obtained a B.Sc. in Physics from Brown University.<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and riding bikes.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu
 </span></p>
 					<!--{action:button global="false"}-->
 				  </div><!-- end banner inner -->
@@ -462,7 +462,7 @@ jQuery(document).ready(init);
 
 <div><div class="wsite-image wsite-image-border-border-width:0 " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:right">
 <a>
-<img src="uploads/3/2/1/1/32113891/m27-square_orig.jpg" alt="Picture" style="width:auto;max-width:100%" />
+<img src="uploads/images/m27-square_orig.jpg" alt="Picture" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
@@ -476,7 +476,7 @@ jQuery(document).ready(init);
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="uploads/3/2/1/1/32113891/img-4313_orig.jpg" alt="Picture" style="width:auto;max-width:100%" />
+<img src="uploads/images/img-4313_orig.jpg" alt="Picture" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
@@ -489,7 +489,7 @@ jQuery(document).ready(init);
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:left">
 <a>
-<img src="uploads/3/2/1/1/32113891/moon_orig.jpg" alt="Picture" style="width:auto;max-width:100%" />
+<img src="uploads/images/moon_orig.jpg" alt="Picture" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
