--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 {"@context" : "http://schema.org",
  "@type" : "Organization",  
   "name" : "Kaley Brauer",
-  "url" : "http://www.mit.edu/~kbrauer", 
-  "logo": "http://www.mit.edu/~kbrauer/uploads/images/doe_headshot.jpeg" }
+  "url" : "https://kaleybrauer.github.io", 
+  "logo": "uploads/images/doe_headshot.jpeg" }
 </script>
 
 		<title>Kaley Brauer - About</title>
@@ -25,7 +25,7 @@
 
 <meta property="og:site_name" content="Kaley Brauer" />
 <meta property="og:title" content="Kaley Brauer" />
-<meta property="og:description" content="Researcher and Designer: I study astrophysics/cosmology, focusing on galaxy formation and the chemical and physical properties of the early universe." />
+<meta property="og:description" content="Computational Astrophysicist" />
 <meta property="og:image" content="http://www.mit.edu/~kbrauer/uploads/images/doe_headshot.jpeg" />
 <meta name="viewport" content="width=device-width">
   
@@ -204,7 +204,7 @@ var STYLE_PREFIX = 'wsite';
 	Computational Astrophysicist
 </span></h2>
 					<p><span class="wsite-text wsite-headline-paragraph">
-	I study galaxy formation and the astrophysical origins of heavy elements. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time. My work uses high performance computing and statistical methods. <br /><br />Currently, I am completing my Physics Ph.D. at MIT. Previously, I obtained a B.Sc. in Physics from Brown University.<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and riding bikes.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu
+	I study galaxy formation and the astrophysical origins of heavy elements using cutting-edge simulations. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time.<br /><br />Currently, I am completing my Physics Ph.D. at MIT. In July 2023, I will join Harvard University as an NSF Fellow!<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and bicycling.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu
 </span></p>
 					<!--{action:button global="false"}-->
 				  </div><!-- end banner inner -->
@@ -220,38 +220,8 @@ var STYLE_PREFIX = 'wsite';
 	<div id="main-wrap">
 		<div class="container">
 		<div id="wsite-content" class="wsite-elements wsite-not-footer">
-	  
-<!--
-
-		<div id="wsite-content" class="wsite-elements wsite-not-footer">
-	<div class="paragraph" style="text-align:left;">Below you can see an slideshow&nbsp;of some of my experiences over the past few years, both professional and extracurricular.&nbsp;</div>
 
 
-<div><div style="height:20px;overflow:hidden"></div>
-
-<div id='902850964116819804-slideshow'></div>
-<script type='text/javascript'>
-(function(jQuery) {
-function init() { window.wSlideshow && window.wSlideshow.render({elementID:"902850964116819804",nav:"thumbnails",navLocation:"bottom",captionLocation:"bottom",transition:"fade",autoplay:"0",speed:"5",aspectRatio:"auto",showControls:"true",randomStart:"false",images:[{"url":"3/2/1/1/32113891/thesis.jpg","width":"400","height":"300","caption":"Presenting my undergraduate honors thesis. To read the thesis, click the picture.","link":"https://www.brown.edu/academics/physics/sites/physics/files/images/Brauer-2017.pdfweeblylink_new_window"},{"url":"3/2/1/1/32113891/dsc3942.jpg","width":"400","height":"169","caption":"I joined the Catalyst Design Lab at Brown University to conduct my thesis work."},{"url":"3/2/1/1/32113891/cfa-talk.jpg","width":"400","height":"300","caption":"Presenting my research at the Harvard-Smithsonian Center for Astrophysics in August 2016. Using Doppler tomography, I mapped the line-emitting regions of V801 Ara and Cyg X-3  in velocity space to determine the structures of the systems."},{"url":"3/2/1/1/32113891/img-4161.jpg","width":"400","height":"400","caption":"I was able to visit Fermilab in April 2016 to assist with research being done on the Mono-Higgs search for dark matter."},{"url":"3/2/1/1/32113891/167929.jpg","width":"400","height":"293","caption":"Presenting my model of RS11 at the 47th Annual Meeting of the Division of Planetary Sciences in National Harbor, MD"},{"url":"3/2/1/1/32113891/73143.jpg","width":"400","height":"345","caption":"Here I am presenting an overview of my SETI REU research as part of SETI&#x27;s Colloquium series. By analyzing radar data, I produced a physical model of an unusual near-Earth asteroid, 2000 RS11. To view both my talk and the talks from other SETI interns, click the image.","link":"https://youtu.be/csOsjd6Ix6I?t=18m55sweeblylink_new_window"},{"url":"3/2/1/1/32113891/6184505.jpg","width":"400","height":"300","caption":"SETI/NASA interns at Lick Observatory in June 2015. We were able to explore the facilities and learn about the work that has and is currently being done there."},{"url":"3/2/1/1/32113891/6730150.jpg","width":"400","height":"400","caption":"Rotating the 36 inch refractor at Lick Observatory"},{"url":"3/2/1/1/32113891/9145707.jpg","width":"400","height":"533","caption":"The DSS-14 telescope at Goldstone planetary radar facility. I was able to visit with my SETI mentor, Dr. Michael Busch,  in July of 2015 and observe asteroids including the interesting UW158."},{"url":"3/2/1/1/32113891/1437020.jpg","width":"400","height":"533","caption":"Brown University women attending the Conference for Undergraduate Women in Physics in January 2015"},{"url":"3/2/1/1/32113891/5164451.jpg","width":"400","height":"223","caption":"The Texas A&amp;M Physics Show. I was an assistant for the show during the summer of 2014."},{"url":"3/2/1/1/32113891/machu-picchu.jpg","width":"400","height":"300","caption":"My dad, boyfriend, and I hiked the Inca Trail and the area around Machu Picchu over the course of five days in August 2016"}]}) }
-jQuery(document).ready(init);
-})(window.jQuery)
-</script>
-
--->
-
-<!--
-<div class="bxslider">
-  <div><img src="uploads/images/dsc3942.jpg" title="I joined the Catalyst Design Lab at Brown University to conduct my thesis work (see Research)"></div>
-  <div><img src="uploads/images/thesis.jpg" title="Presenting my undergraduate honors thesis. To read the thesis, click the picture.","link":"https://www.brown.edu/academics/physics/sites/brown.edu.academics.physics/files/uploads/Brauer-2017.pdf"></div>
-  <div><img src="uploads/images/cfa-talk.jpg" title="Presenting my summer research project at the Harvard-Smithsonian Center for Astrophysics in August 2016. Using Doppler tomography, I mapped the line-emitting regions of V801 Ara and Cyg X-3  in velocity space to determine the structures of the systems."></div>
-</div>
--->
-
-<!--
-<div style="height:20px;overflow:hidden"></div></div>
-
-<div class="wsite-spacer" style="height:72px;"></div>
--->
 
 <h2 class="wsite-content-title" style="text-align:center; font-size:22px;">IN THE NEWS</h2>
 
@@ -260,6 +230,23 @@ jQuery(document).ready(init);
 	<table class="wsite-multicol-table">
 		<tbody class="wsite-multicol-tbody">
 
+
+
+<tr class="wsite-multicol-tr">			
+				<td class="wsite-multicol-col" style="width:35%; padding:0 0; vertical-align:middle">
+<div><div class="wsite-image wsite-image-border-border-width:0 " style="padding-top:10px;padding-bottom:10px;margin-left:60px;margin-right:20px;text-align:right">
+<a href="https://www.avaruus.fi/tahdetjaavaruuslehti/uusin-numero.html">
+<img src="uploads/images/comet.png" alt="Picture" style="width:auto;max-width:100%" />
+</a>
+</div></div>
+				</td>				
+				<td class="wsite-multicol-col" style="width:65%; padding:0 0; vertical-align:middle">
+<div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:30px;text-align:center">
+<div class="paragraph" style="text-align:left; font-size:18px;">
+	<a href="https://www.avaruus.fi/tahdetjaavaruuslehti/uusin-numero.html">Tähdet ja avaruus: Interview about Comet ZTF</a></div>
+<div class="paragraph" style="text-align:left;"><b>February 15, 2023:</b> Article in the Finnish astronomy magazine Tähdet ja avaruus (Stars and Space) about Comet C/2022 E3 (ZTF), the early solar system, and the early Milky Way.
+</div></div>
+	</td>			</tr>
 
 
 
@@ -423,21 +410,7 @@ jQuery(document).ready(init);
 	</td>			</tr>
 
 
-			<!-- <tr class="wsite-multicol-tr">			
-				<td class="wsite-multicol-col" style="width:35%; padding:0 0; vertical-align:middle;">
-<div><div class="wsite-image wsite-image-border-border-width:0 " style="padding-top:10px;padding-bottom:10px;margin-left:60px;margin-right:20px;text-align:right">
-<a href="https://arxiv.org/abs/1809.05539">
-<img src="uploads/images/frII_UFDmax.jpg" alt="Picture" style="width:auto;max-width:100%" />
-</a>
-</div></div>
-				</td>				
-				<td class="wsite-multicol-col" style="width:65%; padding:0 0; vertical-align:middle">
-<div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:30px;text-align:center">
-<div class="paragraph" style="text-align:left; font-size:18px;">
-	<a href="https://arxiv.org/abs/1809.05539">New Paper on the Origin of r-process Stars</a></div>
-<div class="paragraph" style="text-align:left;"><b>September 14, 2018:</b> "The Origin of r-process Enhanced Metal-Poor Halo Stars In Now-Destroyed Ultra-Faint Dwarf Galaxies" is now on arxiv! We find a likely link between r-process enhanced stars we observe today and the smallest galaxies that merged together to form the Milky Way. <br><i>Update 12/23/18:</i> Paper officially accepted by ApJ!</div>
-</div></div>
-	</td>			</tr> -->
+		
 
 		</tbody>
 	</table>
@@ -533,185 +506,7 @@ if (document.cookie.match(/(^|;)\s*is_mobile=1/)) {
 </script>
 	  </div><!-- end container -->
 	</div><!-- end footer-wrap -->
-<!--
-		<script type="text/javascript">
 
-	var _gaq = _gaq || [];
-	_gaq.push(['_setAccount', 'UA-7870337-1']);
-	_gaq.push(['_setDomainName', 'none']);
-	_gaq.push(['_setAllowLinker', true]);
-
-	(function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	})();
-
-	_W.Analytics = _W.Analytics || {'trackers': {}};
-	_W.Analytics.trackers.wGA = '_gaq';
-
-</script>
-
-<script type="text/javascript" async=1>
-	;(function(p,l,o,w,i,n,g){if(!p[i]){p.GlobalSnowplowNamespace=p.GlobalSnowplowNamespace||[];
-			p.GlobalSnowplowNamespace.push(i);p[i]=function(){(p[i].q=p[i].q||[]).push(arguments)
-			};p[i].q=p[i].q||[];n=l.createElement(o);g=l.getElementsByTagName(o)[0];n.async=1;
-			n.src=w;g.parentNode.insertBefore(n,g)}}(window,document,'script','//cdn2.editmysite.com/js/wsnbn/snowday262.js','snowday'));
-
-	var r = [99, 104, 101, 99, 107, 111, 117, 116, 46, 40, 119, 101, 101, 98, 108, 121, 124, 101, 100, 105, 116, 109, 121, 115, 105, 116, 101, 41, 46, 99, 111, 109];
-	var snPlObR = function(arr) {
-		var s = '';
-		for (var i = 0 ; i < arr.length ; i++){
-			s = s + String.fromCharCode(arr[i]);
-		}
-		return s;
-	};
-	var s = snPlObR(r);
-
-	var regEx = new RegExp(s);
-
-	_W.Analytics = _W.Analytics || {'trackers': {}};
-	_W.Analytics.trackers.wSP = 'snowday';
-	_W.Analytics.user_id = '32113891';
-	_W.Analytics.site_id = '746820657522257477';
-
-
-	(function(app_id, ec_hostname, discover_root_domain) {
-		var track = window[_W.Analytics.trackers.wSP];
-		if (!track) return;
-		track('newTracker', app_id, ec_hostname, {
-			appId: app_id,
-			post: true,
-			platform: 'web',
-			discoverRootDomain: discover_root_domain,
-			cookieName: '_snow_',
-			contexts: {
-				webPage: true,
-				performanceTiming: true,
-				gaCookies: true
-			},
-			crossDomainLinker: function (linkElement) {
-				return regEx.test(linkElement.href);
-			}
-		});
-		track('trackPageView', _W.Analytics.user_id+':'+_W.Analytics.site_id);
-		track('crossDomainLinker', function (linkElement) {
-			return regEx.test(linkElement.href);
-		});
-	})(
-		'_wn',
-		'ec.editmysite.com',
-		false
-	);
-</script>
-
-<script type="text/javascript">
-var _qevents = _qevents || [];
-
-(function() {
-var elem = document.createElement('script');
-elem.src = "https://secure.quantserve.com/quant.js";
-elem.async = true;
-elem.type = "text/javascript";
-var scpt = document.getElementsByTagName('script')[0];
-scpt.parentNode.insertBefore(elem, scpt);
-})();
-
-_qevents.push({
-qacct:"p-0dYLvhSGGqUWo",
-labels:"l10,u32113891.u32113891s746820657522257477"
-});
-</script>
-
-<noscript>
-<div style="display:none;">
-<img src="//pixel.quantserve.com/pixel/p-0dYLvhSGGqUWo.gif?labels=l10,u32113891.u32113891s746820657522257477" border="0" height="1" width="1" alt="Quantcast"/>
-</div>
-</noscript>
-
-
-<script>
-
-	(function(jQuery) {
-		try {
-			if (jQuery) {
-				jQuery('div.blog-social div.fb-like').attr('class', 'blog-social-item blog-fb-like');
-				var $commentFrame = jQuery('#commentArea iframe');
-				if ($commentFrame.length > 0) {
-					var frameHeight = jQuery($commentFrame[0].contentWindow.document).height() + 50;
-					$commentFrame.css('min-height', frameHeight + 'px');
-				}
-				if (jQuery('.product-button').length > 0){
-					jQuery(document).ready(function(){
-						jQuery('.product-button').parent().each(function(index, product){
-							if(jQuery(product).attr('target') == 'paypal'){
-								if (!jQuery(product).find('> [name="bn"]').length){
-									jQuery('<input>').attr({
-										type: 'hidden',
-										name: 'bn',
-										value: 'DragAndDropBuil_SP_EC'
-									}).appendTo(product);
-								}
-							}
-						});
-					});
-				}
-			}
-			else {
-				// Prototype
-				$$('div.blog-social div.fb-like').each(function(div) {
-					div.className = 'blog-social-item blog-fb-like';
-				});
-				$$('#commentArea iframe').each(function(iframe) {
-					iframe.style.minHeight = '410px';
-				});
-			}
-		}
-		catch(ex) {}
-	})(window._W && _W.jQuery);
-
-</script>
-<div id="eu-cookie" class="notification" style="display: none;">
-	<span id="eu-cookie-content"></span>
-	<span id="eu-cookie-close">&#10005;</span>
-</div>
-
-<script type="text/javascript">
-	(function($) {
-		window.cookie_location = '';
-		// this cookie_content should already be pre-encoded from CookieSettingView.js
-		window.cookie_content = '' || _W.stl('templates.publish.virtual-includes.footerCode_1');
-		window.cookie_policy_key = '746820657522257477_cookie_policy';
-		window.cookie_content_hash = '';
-
-		if (!_W.getCookie(window.cookie_policy_key) || _W.getCookie(window.cookie_policy_key) !== window.cookie_content_hash){
-			if (window.cookie_location === 'top' || window.cookie_location === 'bottom'){
-				$('#eu-cookie-content').text(decodeURIComponent(window.cookie_content));
-				(window.cookie_location === 'top') ? animateFromTop() : animateFromBottom();
-				$('#eu-cookie').show();
-			}
-		}
-
-		$('#eu-cookie-close').click(function(){
-			_W.setCookie(window.cookie_policy_key, window.cookie_content_hash, 100000);
-			$('#eu-cookie').hide();
-		});
-
-		function animateFromTop(){
-			$('#eu-cookie').css({
-				'top': '0px',
-				'animation': 'reveal-top 1 2s'
-			});
-		}
-
-		function animateFromBottom(){
-			$('#eu-cookie').css({
-				'bottom': '0px',
-				'animation': 'reveal-bottom 1 2s'
-			});
-		}
-	})(window._W && _W.jQuery);
-</script> -->
 
 	</body>
 </html>
