--- a/index.html
+++ b/index.html
@@ -185,7 +185,6 @@ var STYLE_PREFIX = 'wsite';
 		<div class="social"><div style="text-align:left;"><div style="height:0px;overflow:hidden"></div>
 <span class="wsite-social wsite-social-default"><a class='first-child wsite-social-item wsite-social-linkedin' href='http://www.linkedin.com/in/kaleybrauer' target='_blank'><span class='wsite-social-item-inner'></span></a><a class='first-child wsite-social-item wsite-social-twitter' href='https://twitter.com/kaleybrauer' target='_blank'><span class='wsite-social-item-inner'></span></a><a class='last-child wsite-social-item wsite-social-mail' href='mailto:kbrauer@mit.edu' target='_blank'><span class='wsite-social-item-inner'></span></a></span>
 <div style="height:0px;overflow:hidden"></div></div></div>
-		<div class="search"></div>
 	  </div><!-- end container -->
 	</div><!-- end nav-wrap -->
 
@@ -200,11 +199,12 @@ var STYLE_PREFIX = 'wsite';
 		  <div id="bannerright" class="landing-banner-outer">
 			  <div class="landing-banner-mid">
 				  <div class="landing-banner-inner">
+				  </br> </br>
 					<h2><span class="wsite-text wsite-headline">
 	Computational Astrophysicist
 </span></h2>
-					<p><span class="wsite-text wsite-headline-paragraph">
-	I study galaxy formation and the astrophysical origins of heavy elements using cutting-edge simulations. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time.<br /><br />Currently, I am completing my Physics Ph.D. at MIT. In July 2023, I will join Harvard University as an NSF Fellow!<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and bicycling.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu
+					<p><span class="wsite-text wsite-headline-paragraph"><h3>
+	I study galaxy formation and the astrophysical origins of heavy elements using cutting-edge simulations. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time.<br /><br />Currently, I am completing my Physics Ph.D. at MIT. In July 2023, I will join Harvard University as an NSF Fellow!<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and bicycling.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu</h3>
 </span></p>
 					<!--{action:button global="false"}-->
 				  </div><!-- end banner inner -->
