--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ var STYLE_PREFIX = 'wsite';
 		<div class="nav-container"><ul class="wsite-menu-default">
 		<li id="active" class="wsite-menu-item-wrap">
 			<a
-						href="index.html"
+						href=""
 				class="wsite-menu-item"
 				>
 				About
@@ -236,7 +236,7 @@ var STYLE_PREFIX = 'wsite';
 				<td class="wsite-multicol-col" style="width:35%; padding:0 0; vertical-align:middle">
 <div><div class="wsite-image wsite-image-border-border-width:0 " style="padding-top:10px;padding-bottom:10px;margin-left:60px;margin-right:20px;text-align:right">
 <a href="https://www.avaruus.fi/tahdetjaavaruuslehti/uusin-numero.html">
-<img src="uploads/images/comet.png" alt="Picture" style="width:auto;max-width:100%" />
+<img src="uploads/images/comet.jpeg" alt="Picture" style="width:auto;max-width:100%" />
 </a>
 </div></div>
 				</td>				
