--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@ var STYLE_PREFIX = 'wsite';
 		  <div id="bannerright" class="landing-banner-outer">
 			  <div class="landing-banner-mid">
 				  <div class="landing-banner-inner">
-				  </br> </br> </br>
+				  </br> </br> 
 					<h2><span class="wsite-text wsite-headline">
 	Computational Astrophysicist
 </span></h2>
-					<p><span class="wsite-text wsite-headline-paragraph"><h3>
-	I study galaxy formation and the astrophysical origins of heavy elements using cutting-edge simulations. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time.<br /><br />Currently, I am completing my Physics Ph.D. at MIT. In July 2023, I will join Harvard University as an NSF Fellow!<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and bicycling.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu</h3>
+					<p ><span class="wsite-text wsite-headline-paragraph"> <div class="paragraph" style="font-size:15px;">
+	I study galaxy formation and the astrophysical origins of heavy elements using cutting-edge simulations. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time.<br /><br />Currently, I am completing my Physics Ph.D. at MIT. In July 2023, I will join Harvard University as an NSF Fellow!<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and bicycling.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu </div>
 </span></p>
 					<!--{action:button global="false"}-->
 				  </div><!-- end banner inner -->
