--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </script>
 
 		<title>Kaley Brauer - About</title>
-<meta name="description" content="Researcher and Designer: I study astrophysics/cosmology, focusing on galaxy formation and the chemical and physical properties of the early universe." /> 
+<meta name="description" content="Computational Astrophysicist: I study galaxy formation and the astrophysical origins of heavy elements using cutting-edge simulations." /> 
 
 <meta property="og:site_name" content="Kaley Brauer" />
 <meta property="og:title" content="Kaley Brauer" />
@@ -110,7 +110,7 @@ var STYLE_PREFIX = 'wsite';
 	
 	function initFlyouts(){
 		initPublishedFlyoutMenus(
-			[{"id":"737424062569551301","title":"About","url":"index.html","target":"","nav_menu":false,"nonclickable":false},{"id":"615134066788109276","title":"Research","url":"research.html","target":"","nav_menu":false,"nonclickable":false},{"id":"258540258500214140","title":"Graphic Design","url":"graphic-design.html","target":"","nav_menu":false,"nonclickable":false},{"id":"12345","title":"CV","url":"cv.pdf","target":"","nav_menu":false,"nonclickable":false}],
+			[{"id":"737424062569551301","title":"About","url":"","target":"","nav_menu":false,"nonclickable":false},{"id":"615134066788109276","title":"Research","url":"research.html","target":"","nav_menu":false,"nonclickable":false},{"id":"258540258500214140","title":"Graphic Design","url":"graphic-design.html","target":"","nav_menu":false,"nonclickable":false},{"id":"12345","title":"CV","url":"cv.pdf","target":"","nav_menu":false,"nonclickable":false}],
 			"737424062569551301",
 			'',
 			'active',
@@ -203,9 +203,9 @@ var STYLE_PREFIX = 'wsite';
 					<h2><span class="wsite-text wsite-headline">
 	Computational Astrophysicist
 </span></h2>
-					<p ><span class="wsite-text wsite-headline-paragraph"> <div class="paragraph" style="font-size:15px;">
+					</br> <span class="wsite-text wsite-headline-paragraph"> <div class="paragraph" style="font-size:15px;">
 	I study galaxy formation and the astrophysical origins of heavy elements using cutting-edge simulations. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time.<br /><br />Currently, I am completing my Physics Ph.D. at MIT. In July 2023, I will join Harvard University as an NSF Fellow!<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and bicycling.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu </div>
-</span></p>
+</span>
 					<!--{action:button global="false"}-->
 				  </div><!-- end banner inner -->
 			  </div><!-- end banner mid -->
