--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@ var STYLE_PREFIX = 'wsite';
 	
 	function initFlyouts(){
 		initPublishedFlyoutMenus(
-			[{"id":"737424062569551301","title":"About","url":"index.html","target":"","nav_menu":false,"nonclickable":false},{"id":"615134066788109276","title":"Research","url":"research.html","target":"","nav_menu":false,"nonclickable":false},{"id":"258540258500214140","title":"Graphic Design","url":"graphic-design.html","target":"","nav_menu":false,"nonclickable":false},{"id":"12345","title":"CV","url":"cv.pdf","target":"","nav_menu":false,"nonclickable":false}],
+			[{"id":"737424062569551301","title":"About","url":"","target":"","nav_menu":false,"nonclickable":false},{"id":"615134066788109276","title":"Research","url":"research.html","target":"","nav_menu":false,"nonclickable":false},{"id":"258540258500214140","title":"Graphic Design","url":"graphic-design.html","target":"","nav_menu":false,"nonclickable":false},{"id":"12345","title":"CV","url":"cv.pdf","target":"","nav_menu":false,"nonclickable":false}],
 			"615134066788109276",
 			'',
 			'active',
@@ -105,7 +105,7 @@ var STYLE_PREFIX = 'wsite';
 		<div class="nav-container"><ul class="wsite-menu-default">
 		<li id="pg737424062569551301" class="wsite-menu-item-wrap">
 			<a
-						href="index.html"
+						href=""
 				class="wsite-menu-item"
 				>
 				About
