--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <style type='text/css'>
 .wsite-header {
-	background-image: url(uploads/images/doecsgf2.jpeg) !important;
+	background-image: url(uploads/images/doe_headshot_full.jpeg) !important;
 	background-size: 100% auto !important;
 	background-position: 0 0 !important;
 }
@@ -171,11 +171,9 @@ var STYLE_PREFIX = 'wsite';
 	  <div class="container">
 		<div id="logo"><span class="wsite-logo">
 
-	<a href="">
 	
 	<span id="wsite-title">Kaley Brauer</span>
 	
-	</a>
 
 </span></div>		
 		<div class="logo-spacer"></div>
@@ -272,7 +270,7 @@ var STYLE_PREFIX = 'wsite';
 				<td class="wsite-multicol-col" style="width:35%; padding:0 0; vertical-align:middle">
 <div><div class="wsite-image wsite-image-border-border-width:0 " style="padding-top:10px;padding-bottom:10px;margin-left:60px;margin-right:20px;text-align:right">
 <a href="https://www.krellinst.org/csgf/conf/2022/video/brauer2018">
-<img src="uploads/images/doe_headshot.jpeg" alt="Picture" style="width:auto;max-width:100%" />
+<img src="uploads/images/doecsgf2_square.jpeg" alt="Picture" style="width:auto;max-width:100%" />
 </a>
 </div></div>
 				</td>				
