--- a/research.html
+++ b/research.html
@@ -230,6 +230,7 @@ var STYLE_PREFIX = 'wsite';
 <div class="paragraph" style="text-align:justify;">
 
 	<img src="uploads/images/galaxy_diagram2018.jpg" alt="Picture" style="width:auto;max-width:100%" />
+	<div class="paragraph" style="text-align:center;"><div style="font-size:11px;">Anatomy of the Milky Way: Bulge, thin disk, thick disk, stellar halo</div></div>
 
 	<br><br>
 
