--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@ var STYLE_PREFIX = 'wsite';
 			</a>
 			
 		</li>
-<!-- 		<li id="pg258540258500214140" class="wsite-menu-item-wrap">
+		<li id="pg258540258500214140" class="wsite-menu-item-wrap">
 			<a
-						href="graphic-design.html"
+						href="outreach.html"
 				class="wsite-menu-item"
 				>
-				Graphic Design
+				Outreach & Art
 			</a>
 			
-		</li> -->
+		</li>
 		<li id="pg12345" class="wsite-menu-item-wrap">
 			<a
 						href="cv.pdf"
@@ -172,7 +172,7 @@ var STYLE_PREFIX = 'wsite';
 		<div id="logo"><span class="wsite-logo">
 
 	
-	<span id="wsite-title">Kaley Brauer</span>
+	<span id="wsite-title">Dr. Kaley Brauer</span>
 	
 
 </span></div>		
