--- a/research.html
+++ b/research.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-109194454-1');
 </script>
 
-		<title>Research - Kaley Brauer</title>
+		<title>Kaley Brauer - Research</title>
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -121,15 +121,15 @@ var STYLE_PREFIX = 'wsite';
 			</a>
 			
 		</li>
-<!-- 		<li id="pg258540258500214140" class="wsite-menu-item-wrap">
+		<li id="pg258540258500214140" class="wsite-menu-item-wrap">
 			<a
-						href="graphic-design.html"
+						href="outreach.html"
 				class="wsite-menu-item"
 				>
-				Graphic Design
+				Outreach & Art
 			</a>
 			
-		</li> -->
+		</li>
 		<li id="pg12345" class="wsite-menu-item-wrap">
 			<a
 						href="cv.pdf"
@@ -148,13 +148,13 @@ var STYLE_PREFIX = 'wsite';
 		<div id="logo"><span class="wsite-logo">
 
 	
-	<span id="wsite-title">Kaley Brauer</span>
+	<span id="wsite-title">Dr. Kaley Brauer</span>
 	
 
 </span></div>		
 		<div class="logo-spacer"></div>
 		<div class="phone-number"><span class="wsite-text wsite-phone">
-	Astrophysics Ph.D. Student,&nbsp;Massachusetts Institute of Technology
+	Astrophysics Ph.D.,&nbsp;Massachusetts Institute of Technology
 </span></div>
 <div class="social"><div style="text-align:left;"><div style="height:0px;overflow:hidden"></div>
 <span class="wsite-social wsite-social-default"><a class='first-child wsite-social-item wsite-social-linkedin' href='http://www.linkedin.com/in/kaleybrauer' target='_blank'><span class='wsite-social-item-inner'></span></a><a class='first-child wsite-social-item wsite-social-twitter' href='https://twitter.com/kaleybrauer' target='_blank'><span class='wsite-social-item-inner'></span></a><a class='last-child wsite-social-item wsite-social-mail' href='mailto:kbrauer@mit.edu' target='_blank'><span class='wsite-social-item-inner'></span></a></span>
@@ -188,7 +188,7 @@ var STYLE_PREFIX = 'wsite';
 				</td>				<td class="wsite-multicol-col" style="width:58.080808080808%; padding:0 15px;">
 					
 						
-
+</br> </br> 
 <h2 class="wsite-content-title"><font size="5">Galaxy Formation and Early Universe</font></h2>
 
 <div class="paragraph">
