--- a/outreach.html
+++ b/outreach.html
@@ -191,7 +191,6 @@ var STYLE_PREFIX = 'wsite';
 				</td>				<td class="wsite-multicol-col" style="width:60%; padding:0 15px;">
 					
 						
-</br>
 <h2 class="wsite-content-title"><font size="5">Outreach & Art</font></h2>
 
 <div class="paragraph">
@@ -336,7 +335,7 @@ Recently, I was awarded NSF funding to create astronomy children's books. This p
 
 <h2 class="wsite-content-title" style="text-align:left;"><font size="5">SCIENCE CARTOONS (SCITOONS)</font></h2>
 
-<div class="paragraph" style="text-align:left;"><span id="selectionBoundary_1440482933491_2788559375330806" class="rangySelectionBoundary" style="display: none;">&#65279;</span>SciToons goal is to combine art, animation, high-quality multimedia and storytelling&nbsp;to engage a broader audience in science. Below you can see a video that I worked on with other members of the group:<br /><br /><span style="display:none;"></span></div>
+<div class="paragraph" style="text-align:left;"><span id="selectionBoundary_1440482933491_2788559375330806" class="rangySelectionBoundary" style="display: none;">&#65279;</span>SciToons' goal is to combine art, animation, high-quality multimedia and storytelling to engage a broader audience in science. Below you can see a video that I worked on with other members of the group:<br /><br /><span style="display:none;"></span></div>
 
 <div class="embed-container">
     <iframe width="640" height="390" 
