--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ var STYLE_PREFIX = 'wsite';
 </span></div>		
 		<div class="logo-spacer"></div>
 		<div class="phone-number"><span class="wsite-text wsite-phone">
-	Astrophysics Ph.D., Massachusetts Institute of Technology
+	Astrophysics Ph.D., &nbsp;Massachusetts Institute of Technology
 </span></div>
 		<div class="social"><div style="text-align:left;"><div style="height:0px;overflow:hidden"></div>
 <span class="wsite-social wsite-social-default"><a class='first-child wsite-social-item wsite-social-linkedin' href='http://www.linkedin.com/in/kaleybrauer' target='_blank'><span class='wsite-social-item-inner'></span></a><a class='first-child wsite-social-item wsite-social-twitter' href='https://twitter.com/kaleybrauer' target='_blank'><span class='wsite-social-item-inner'></span></a><a class='last-child wsite-social-item wsite-social-mail' href='mailto:kbrauer@mit.edu' target='_blank'><span class='wsite-social-item-inner'></span></a></span>
