--- a/outreach.html
+++ b/outreach.html
@@ -195,7 +195,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph">
 
-Art is a vital way to both communicate information and engage audiences, two things that are incredibly important in science. When organizing and volunteering in outreach activities, I try to incorporate beautiful visualizations, paintings, and illustrations as much as possible.
+Art is a vital way to communicate information and engage audiences, two things that are incredibly important in science. When organizing and volunteering in outreach activities, I try to incorporate beautiful visualizations, paintings, and illustrations as much as possible.
 
 </br> </br> 
 
