--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="height: 50px; overflow: hidden; width: 100%;"></div></div>
 
 
-<div class="paragraph" style="text-align:center; font-size:15px;"><i>Enjoy some astrophotography from my time as an Astronomy TA at Brown!</i></div>
+<div class="paragraph" style="text-align:center; font-size:15px;"><i>Enjoy some of my astrophotography!</i></div>
 
 <div><div class="wsite-multicol"><div class="wsite-multicol-table-wrap" style="margin:0 -15px;">
 	<table class="wsite-multicol-table">
