--- a/outreach.html
+++ b/outreach.html
@@ -107,7 +107,7 @@ var STYLE_PREFIX = 'wsite';
 		<div class="nav-container"><ul class="wsite-menu-default">
 		<li id="pg737424062569551301" class="wsite-menu-item-wrap">
 			<a
-						href="index.html"
+						href="/"
 				class="wsite-menu-item"
 				>
 				About
@@ -195,7 +195,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph">
 
-Art is a vital way to communicate information and engage audiences, two things that are incredibly important in science. When organizing and volunteering in outreach activities, I try to incorporate beautiful visualizations, paintings, and illustrations as much as possible.
+Art is a vital way to communicate information and engage audiences, two incredibly important aspects of science. When organizing and volunteering in outreach activities, I try to incorporate beautiful visualizations, paintings, and illustrations as much as possible.
 
 </br> </br> 
 
